@@ -6,31 +6,32 @@
  * Copyright (C) Ondrej Tuma 2011
  * Code is present with BSD licence.
  */
-// modules: Gtk
+// modules: gtk+-3.0
 
 public class CloseIco : Gtk.EventBox {
     public CloseIco () {
-        add (new Gtk.Image.from_stock (Gtk.Stock.CLOSE,
-                                       Gtk.IconSize.SMALL_TOOLBAR));
+        this.add (new Gtk.Image.from_icon_name ("window-close",
+                                                Gtk.IconSize.SMALL_TOOLBAR));
     }
 }
 
-public class TabLabel : Gtk.HBox {
+public class TabLabel : Gtk.Box {
     public Gtk.Label label { get; private set; }
     public CloseIco close_button { get; private set; }
 
     public TabLabel (string title) {
-        label = new Gtk.Label(title);
-        add(label);
+        Object (orientation: Gtk.Orientation.HORIZONTAL, spacing: 10);
+        this.label = new Gtk.Label(title);
+        this.add (label);
 
-        close_button = new CloseIco();
-        add(close_button);
+        this.close_button = new CloseIco();
+        this.add (close_button);
 
-        show_all ();
+        this.show_all ();
     }
 
     public void set_title (string title) {
-        label.label = title;
+        this.label.label = title;
     }
 }
 
