@@ -6,12 +6,12 @@
  * Copyright (C) Ondrej Tuma 2011
  * Code is present with BSD licence.
  */
-// modules: Gtk
+// modules: gtk+-3.0
 
 public class WelcomeTab : Gtk.ScrolledWindow, ITab {
     public TabLabel tablabel { get; protected set; }
     public Gtk.Label menulabel { get; protected set; }
-    public string title { get; set; }
+    public string title { get; set; default = _("Start here"); }
 
     public signal void sig_new_file (Gtk.Widget w);
     public signal void sig_open_file (Gtk.Widget w);
@@ -21,29 +21,28 @@ public class WelcomeTab : Gtk.ScrolledWindow, ITab {
     public uint tip_index { get; private set; }
     private Gtk.Label tip_title;
     private Gtk.Label tip_body;
-    private Gtk.VBox file_box;
+    private Gtk.Box file_box;
 
     private Preferences pref;
 
     public WelcomeTab (Preferences pref) throws Error {
+        Object (hscrollbar_policy: Gtk.PolicyType.AUTOMATIC,
+                vscrollbar_policy: Gtk.PolicyType.AUTOMATIC);
         this.pref = pref;
-        title = _("Start here");
 
-        tablabel = new TabLabel (title);
-        tablabel.close_button.button_press_event.connect(
+        this.tablabel = new TabLabel (title);
+        this.tablabel.close_button.button_press_event.connect (
                 (e) => {
-                    closed(this);
+                    this.closed (this);
                     return true;
                 });
-        menulabel = new Gtk.Label (title);
+        this.menulabel = new Gtk.Label (title);
 
-        set_policy(Gtk.PolicyType.AUTOMATIC, Gtk.PolicyType.AUTOMATIC);
+        this.loadui();
+        this.set_recent ();
+        this.set_tips ();
 
-        loadui();
-        set_recent ();
-        set_tips ();
-
-        show_all();
+        this.show_all();
     }
 
     private void loadui () throws Error {
@@ -51,13 +50,12 @@ public class WelcomeTab : Gtk.ScrolledWindow, ITab {
         builder.add_from_file (DATA + "/ui/welcome.ui");
         builder.connect_signals (this);
 
-        var mainbox = builder.get_object ("mainbox") as Gtk.HBox;
-        add_with_viewport (mainbox);
+        var mainbox = builder.get_object ("mainbox") as Gtk.Box;
+        this.add (mainbox);
 
-        tip_title = builder.get_object ("tip_title") as Gtk.Label;
-        tip_body = builder.get_object ("tip_body") as Gtk.Label;
-
-        file_box = builder.get_object ("file_box") as Gtk.VBox;
+        this.tip_title = builder.get_object ("tip_title") as Gtk.Label;
+        this.tip_body = builder.get_object ("tip_body") as Gtk.Label;
+        this.file_box = builder.get_object ("file_box") as Gtk.Box;
 
         // set tooltip
         unowned Gtk.Button bt;
@@ -75,7 +73,7 @@ public class WelcomeTab : Gtk.ScrolledWindow, ITab {
 
     public void set_recent () {
         uint nth = 0;
-        foreach (var it in pref.get_recent_files()){
+        foreach (var it in this.pref.get_recent_files()){
             if (nth == RECENT_FILES)    // max RECENT_FILES
                 break;
 
@@ -91,8 +89,6 @@ public class WelcomeTab : Gtk.ScrolledWindow, ITab {
 
             var title = new Gtk.Label (null);
             title.set_attributes (t_attrs);
-            title.set_alignment (0, (float) 0.5);
-            title.set_padding (10, 0);
 
             var osfile = File.new_for_commandline_arg(path);
             // todo: check permisions
@@ -100,7 +96,7 @@ public class WelcomeTab : Gtk.ScrolledWindow, ITab {
                 title.set_markup (@"<a href=\"#open\" title=\"$path\">$fname</a>");
                 title.activate_link.connect(
                     (e) => {
-                        sig_open_path(title as Gtk.Widget, path);
+                        sig_open_path (title as Gtk.Widget, path);
                         return true;
                     });
             } else {
@@ -115,43 +111,43 @@ public class WelcomeTab : Gtk.ScrolledWindow, ITab {
 
             var time = new Gtk.Label (ctime.to_string());
             time.set_attributes (d_attrs);
-            time.set_alignment (1, (float) 0.5);
+            time.set_halign (Gtk.Align.END);
 
-            var box = new Gtk.VBox (false, 0);
-            box.add (title);
-            box.add (time);
+            var box = new Gtk.Box (Gtk.Orientation.HORIZONTAL, 0);
+            box.pack_start (title, false, true, 10);
+            box.pack_start (time, true, true, 0);
 
-            file_box.add (box);
+            this.file_box.add (box);
             nth++;
         }
     }
 
     public void set_tips () {
-        tips = get_tips ();
-        tip_index = (uint32) GLib.Random.int_range(0, tips.length);
+        this.tips = get_tips ();
+        this.tip_index = (uint32) GLib.Random.int_range(0, tips.length);
 
-        tip_title.set_label (tips[tip_index].title);
-        tip_body.set_label (tips[tip_index].body);
+        this.tip_title.set_label (this.tips[this.tip_index].title);
+        this.tip_body.set_label (this.tips[this.tip_index].body);
     }
 
     [CCode (instance_pos = -1, cname = "G_MODULE_EXPORT welcome_tab_new_file")]
     public void new_file (Gtk.Widget w, Gdk.EventButton e) {
-        sig_new_file(w);
+        this.sig_new_file (w);
     }
 
     [CCode (instance_pos = -1, cname = "G_MODULE_EXPORT welcome_tab_open_file")]
     public void open_file (Gtk.Widget w, Gdk.EventButton e) {
-        sig_open_file(w);
+        this.sig_open_file (w);
     }
 
     [CCode (instance_pos = -1, cname = "G_MODULE_EXPORT welcome_tab_next_tip")]
     public void next_tip (Gtk.Widget w, string uri) {
-        tip_index++;
-        if (tip_index == tips.length)
-            tip_index = 0;
+        this.tip_index++;
+        if (this.tip_index == this.tips.length)
+            this.tip_index = 0;
 
-        tip_title.set_label (tips[tip_index].title);
-        tip_body.set_label (tips[tip_index].body);
+        this.tip_title.set_label (this.tips[this.tip_index].title);
+        this.tip_body.set_label (this.tips[this.tip_index].body);
     }
 
     [CCode (instance_pos = -1, cname = "G_MODULE_EXPORT welcome_tab_open_uri")]
