@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.20.0 -->
 <interface>
-  <!-- interface-requires gtk+ 3.0 -->
-  <object class="GtkHBox" id="mainbox">
+  <requires lib="gtk+" version="3.0"/>
+  <object class="GtkBox" id="mainbox">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="homogeneous">True</property>
     <child>
-      <object class="GtkVBox" id="ivbox">
+      <object class="GtkBox">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
         <child>
-          <object class="GtkHBox" id="fast_buttons">
+          <object class="GtkBox">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="homogeneous">True</property>
@@ -20,12 +22,12 @@
                 <property name="can_focus">False</property>
                 <signal name="button-press-event" handler="welcome_tab_new_file" swapped="no"/>
                 <child>
-                  <object class="GtkImage" id="new_file_image">
+                  <object class="GtkImage">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">1</property>
                     <property name="stock">gtk-new</property>
-                    <property name="icon-size">6</property>
+                    <property name="icon_size">6</property>
                   </object>
                 </child>
               </object>
@@ -38,14 +40,12 @@
             <child>
               <object class="GtkButton" id="new_file_button">
                 <property name="label">_New</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="focus_on_click">False</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="relief">none</property>
                 <property name="use_underline">True</property>
-                <property name="focus_on_click">False</property>
                 <property name="xalign">0</property>
                 <signal name="button-press-event" handler="welcome_tab_new_file" swapped="no"/>
               </object>
@@ -61,12 +61,12 @@
                 <property name="can_focus">False</property>
                 <signal name="button-press-event" handler="welcome_tab_open_file" swapped="no"/>
                 <child>
-                  <object class="GtkImage" id="open_file_image">
+                  <object class="GtkImage">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">1</property>
                     <property name="stock">gtk-open</property>
-                    <property name="icon-size">6</property>
+                    <property name="icon_size">6</property>
                   </object>
                 </child>
               </object>
@@ -79,14 +79,12 @@
             <child>
               <object class="GtkButton" id="open_file_button">
                 <property name="label">_Open</property>
-                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="focus_on_click">False</property>
                 <property name="receives_default">True</property>
-                <property name="use_action_appearance">False</property>
                 <property name="relief">none</property>
                 <property name="use_underline">True</property>
-                <property name="focus_on_click">False</property>
                 <property name="xalign">0</property>
                 <signal name="button-press-event" handler="welcome_tab_open_file" swapped="no"/>
               </object>
@@ -105,7 +103,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkHSeparator" id="hseparator2">
+          <object class="GtkSeparator">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
           </object>
@@ -116,16 +114,17 @@
           </packing>
         </child>
         <child>
-          <object class="GtkVBox" id="file_box">
+          <object class="GtkBox" id="file_box">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="orientation">vertical</property>
             <child>
-              <object class="GtkLabel" id="label_recent">
+              <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0</property>
                 <property name="label" translatable="yes">&lt;b&gt;Recent files:&lt;/b&gt;</property>
                 <property name="use_markup">True</property>
+                <property name="xalign">0</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -142,7 +141,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkHSeparator" id="hseparator1">
+          <object class="GtkSeparator">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
           </object>
@@ -153,13 +152,13 @@
           </packing>
         </child>
         <child>
-          <object class="GtkLabel" id="label_tip">
+          <object class="GtkLabel">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="xalign">0</property>
             <property name="ypad">5</property>
             <property name="label" translatable="yes">&lt;b&gt;Tip:&lt;/b&gt;</property>
             <property name="use_markup">True</property>
+            <property name="xalign">0</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -168,17 +167,18 @@
           </packing>
         </child>
         <child>
-          <object class="GtkVBox" id="tip_box">
+          <object class="GtkBox">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="orientation">vertical</property>
             <child>
               <object class="GtkLabel" id="tip_title">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0</property>
                 <property name="xpad">10</property>
                 <property name="label" translatable="yes">&lt;b&gt;&lt;big&gt;label&lt;/big&gt;&lt;/b&gt;</property>
                 <property name="use_markup">True</property>
+                <property name="xalign">0</property>
                 <attributes>
                   <attribute name="scale" value="1.3999999999999999"/>
                 </attributes>
@@ -194,11 +194,11 @@
                 <property name="width_request">400</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0</property>
                 <property name="xpad">10</property>
                 <property name="label" translatable="yes">label</property>
                 <property name="justify">fill</property>
                 <property name="wrap">True</property>
+                <property name="xalign">0</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -207,14 +207,14 @@
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="next_link">
+              <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="xalign">1</property>
                 <property name="xpad">10</property>
                 <property name="label" translatable="yes">&lt;a href="#next_tip"&gt;Next Tip&lt;/a&gt;</property>
                 <property name="use_markup">True</property>
                 <property name="track_visited_links">False</property>
+                <property name="xalign">1</property>
                 <signal name="activate-link" handler="welcome_tab_next_tip" swapped="no"/>
               </object>
               <packing>
@@ -239,21 +239,23 @@
       </packing>
     </child>
     <child>
-      <object class="GtkVBox" id="evbox">
+      <object class="GtkBox">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
         <child>
-          <object class="GtkVBox" id="etip1">
+          <object class="GtkBox">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="orientation">vertical</property>
             <child>
               <object class="GtkLabel" id="etitle1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0</property>
                 <property name="xpad">10</property>
                 <property name="label" translatable="yes">&lt;a href="http://mmarchitect.zeropage.cz/?gtk=1"&gt;Project web pages&lt;/a&gt;</property>
                 <property name="use_markup">True</property>
+                <property name="xalign">0</property>
                 <attributes>
                   <attribute name="scale" value="1.3999999999999999"/>
                 </attributes>
@@ -270,11 +272,11 @@
                 <property name="width_request">400</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0</property>
                 <property name="xpad">10</property>
                 <property name="label" translatable="yes">If you are looking for more informations about project, want to download new version, or you want to start with helping us, see Home page of Mind Map Architect.</property>
                 <property name="justify">fill</property>
                 <property name="wrap">True</property>
+                <property name="xalign">0</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -291,17 +293,18 @@
           </packing>
         </child>
         <child>
-          <object class="GtkVBox" id="etip2">
+          <object class="GtkBox">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="orientation">vertical</property>
             <child>
               <object class="GtkLabel" id="etitle2">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="xalign">0</property>
                 <property name="xpad">10</property>
                 <property name="label" translatable="yes">&lt;a href="http://sourceforge.net/p/mmarchitect/discussion/general/"&gt;General Discussion&lt;/a&gt;</property>
                 <property name="use_markup">True</property>
+                <property name="xalign">0</property>
                 <attributes>
                   <attribute name="scale" value="1.3999999999999999"/>
                 </attributes>
@@ -318,12 +321,12 @@
                 <property name="width_request">400</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0</property>
                 <property name="xpad">10</property>
                 <property name="label" translatable="yes">Have you any question about this application? Or have you some tip for us, or other users ? Can you help to other users. Or you anly wnat to see whats new in project ? Watch General Discussion on SourceForge.net.</property>
                 <property name="justify">fill</property>
                 <property name="wrap">True</property>
                 <property name="wrap_mode">word-char</property>
+                <property name="xalign">0</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -340,17 +343,18 @@
           </packing>
         </child>
         <child>
-          <object class="GtkVBox" id="etip3">
+          <object class="GtkBox">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="orientation">vertical</property>
             <child>
               <object class="GtkLabel" id="etitle3">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="xalign">0</property>
                 <property name="xpad">10</property>
                 <property name="label" translatable="yes">&lt;a href="http://sourceforge.net/p/mmarchitect/tickets/"&gt;Tasks and Bugs&lt;/a&gt;</property>
                 <property name="use_markup">True</property>
+                <property name="xalign">0</property>
                 <attributes>
                   <attribute name="scale" value="1.3999999999999999"/>
                 </attributes>
@@ -367,12 +371,12 @@
                 <property name="width_request">400</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0</property>
                 <property name="xpad">10</property>
                 <property name="label" translatable="yes">Is there bug in this program ? Is missing some future for you in mmarchitect ? Please tell us more information about that. Thank you for your response.</property>
                 <property name="justify">fill</property>
                 <property name="wrap">True</property>
                 <property name="wrap_mode">word-char</property>
+                <property name="xalign">0</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -389,17 +393,18 @@
           </packing>
         </child>
         <child>
-          <object class="GtkVBox" id="etip4">
+          <object class="GtkBox">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="orientation">vertical</property>
             <child>
               <object class="GtkLabel" id="etitle4">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="xalign">0</property>
                 <property name="xpad">10</property>
                 <property name="label" translatable="yes">&lt;a href="http://mmarchitect.zeropage.cz/development.html?gtk=1"&gt;Development of project&lt;/a&gt;</property>
                 <property name="use_markup">True</property>
+                <property name="xalign">0</property>
                 <attributes>
                   <attribute name="scale" value="1.3999999999999999"/>
                 </attributes>
@@ -415,12 +420,12 @@
                 <property name="width_request">400</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0</property>
                 <property name="xpad">10</property>
                 <property name="label" translatable="yes">If you want to help us with this project, translate messages to your languege, develop, create package for your distribution, or anything what you can do for help us, see development page.</property>
                 <property name="justify">fill</property>
                 <property name="wrap">True</property>
                 <property name="wrap_mode">word-char</property>
+                <property name="xalign">0</property>
               </object>
               <packing>
                 <property name="expand">True</property>
